@@ -1,5 +1,9 @@
 2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* ColumnDefinitionTest.cs: Added.
+
+2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* GridTest.cs: Added or expanded tests.
 
 2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>
